add highlights, update news

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -47,13 +47,35 @@
       </a>
     </div>
     <div
-      class="flex-grow w-full px-2 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-slate-300 border-slate-400"
+      class="flex-grow w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-slate-300 border-slate-400"
     >
-      <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
+      <h1 class="pb-2 text-2xl font-bold">News and Updates</h1>
       <ul class="space-y-3">
         <li>
-          <h2 class="text-lg font-semibold">June 3rd, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">July 3rd, 2024</h2>
+          <h3 class="pl-4">
+            <div class="font-semibold">Match scoring has been overhauled!</div>
+            <ul class="ml-5 list-disc">
+              <li>
+                VGC coaches rejoice! Record the scores of <i>multiple</i> games
+                that occur in a series.
+              </li>
+              <li>
+                Analyze match replays to quickly input the stats of the match.
+                (This is not 100% accurate so please double check)
+              </li>
+              <li>Highlights when stats do not line up to ensure accuracy.</li>
+            </ul>
+            The <b class="font-semibold">Other Tools</b> tab has also been added
+            which contains seperate replay analyzer and time conversion tools.
+            The replay analyzer will slowly be updated to include more match
+            details and better visuals over the next few updates. More tools are
+            planned to be added to the tab in the future as well so stay tuned.
+          </h3>
+        </li>
+        <li>
+          <h2 class="text-xl font-semibold">June 3rd, 2024</h2>
+          <h3 class="pl-4">
             The match scheduler is now released in beta! Plan and compare times
             in both timezones to see what time works best. Save the date and
             time so you can easily check when your match is. Your game time is
@@ -66,8 +88,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">May 25th, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">May 25th, 2024</h2>
+          <h3 class="pl-4">
             The project is now fully open source! You can explore and access the
             code for both the
             <a
@@ -86,8 +108,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">May 15th, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">May 15th, 2024</h2>
+          <h3 class="pl-4">
             Introducing the
             <a
               href="https://pokemondraftzone.com/planner"
@@ -103,8 +125,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">April 1st, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">April 1st, 2024</h2>
+          <h3 class="pl-4">
             Happy April Fools' Day! Significant effort has been invested in
             enhancing stability and addressing bugs on the backend. Now, you
             have the ability to import Pokémon from your clipboard for new
@@ -114,8 +136,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">March 12th, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">March 12th, 2024</h2>
+          <h3 class="pl-4">
             Got a couple of updates to share this week. Firstly, the mobile
             experience should be significantly improved. I've revamped the
             layouts to ensure nothing gets cut off when using a mobile device.
@@ -125,8 +147,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">March 3rd, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">March 3rd, 2024</h2>
+          <h3 class="pl-4">
             Thank you everyone for this first round of feedback and bug
             reporting. While there are still some bugs to be fixed, the major
             ones have been squashed at this point. I also got the Score button
@@ -137,8 +159,8 @@
           </h3>
         </li>
         <li>
-          <h2 class="text-lg font-semibold">February 29th, 2024</h2>
-          <h3>
+          <h2 class="text-xl font-semibold">February 29th, 2024</h2>
+          <h3 class="pl-4">
             Welcome Pokemon Draftzone! I am thrilled to announce the launch of
             our beta testing phase! Explore the site, share feedback, and report
             any bugs you encounter to our
