--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -53,24 +53,24 @@
     </div>
   </div>
 
-  <div class="flex w-full px-4">
+  <div class="flex flex-wrap w-full px-2 sm:px-4">
     <div
       formArrayName="matches"
-      class="flex w-1/2 items-center p-0.5 space-x-2 overflow-x-auto"
+      class="flex w-full sm:w-1/2 items-center p-0.5 space-x-2 overflow-x-auto"
     >
       <div
-        class="flex border rounded h-fit border-slate-500 hover:cursor-pointer"
+        class="flex border rounded border-slate-500 hover:cursor-pointer"
         *ngFor="let matchCtrl of matchesFormArray.controls; let i = index"
         [formGroupName]="i"
         (click)="switchMatch(i)"
       >
         <div
-          class="w-fit flex px-2 py-0.5 font-semibold rounded bg-inherit text-ellipsis"
+          class="w-fit flex px-2 py-0.5 font-semibold rounded bg-inherit text-nowrap"
           [ngClass]="gameClass(i)"
         >
           Game {{ i + 1 }}
           <img
-            class="w-4 m-1"
+            class="m-1 max-w-4 min-w-4"
             *ngIf="i > 0"
             src="../../assets/icons/trash.svg"
             (click)="deleteMatch(i)"
@@ -79,23 +79,24 @@
       </div>
       <button (click)="addMatch()">
         <img
-          class="w-8 h-8 p-1 border rounded border-slate-500 bg-slate-100 hover:bg-slate-150 hover:cursor-pointer"
+          class="h-8 p-1 border rounded max-w-8 min-w-8 border-slate-500 bg-slate-100 hover:bg-slate-150 hover:cursor-pointer"
           src="../../assets/icons/plus.svg"
         />
       </button>
     </div>
+
     <div
-      class="flex items-center justify-end w-1/2"
+      class="flex items-center justify-end w-full sm:w-1/2"
       [formGroup]="selectedMatchForm"
     >
       <div
-        class="flex w-full p-1 mx-1 rounded-full shadow-inner max-w-128 h-fit bg-slate-200 text-medium shadow-slate-600"
+        class="flex items-center flex-grow p-1 rounded-full shadow-inner max-w-128 h-fit bg-slate-200 text-medium shadow-slate-600"
       >
         <span class="pl-1">Replay:</span>
         <input
           spellcheck="false"
           formControlName="replay"
-          class="flex-grow mx-2 text-center bg-transparent"
+          class="flex-grow w-full mx-2 text-center bg-transparent"
         />
       </div>
       <button
@@ -118,24 +119,30 @@
           >
             <div class="p-2 border-2 border-cyan-200 rounded-xl">
               <div class="flex pb-1">
-                <div class="grid w-full grid-cols-1 sm:grid-cols-3 gap-x-4">
+                <div
+                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-base"
+                >
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Brought:</div>
-                    <div>{{ statCount(aTeamArray, ["brought"]) }}</div>
+                    <div [ngClass]="broughtCaution()">
+                      {{ statCount(aTeamArray, ["brought"]) }}
+                    </div>
                   </div>
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Kills:</div>
-                    <div>
+                    <div [ngClass]="aKillCaution()">
                       {{ statCount(aTeamArray, ["kills", "indirect"]) }}
                     </div>
                   </div>
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Deaths:</div>
-                    <div>{{ statCount(aTeamArray, ["fainted"]) }}</div>
+                    <div [ngClass]="bKillCaution()">
+                      {{ statCount(aTeamArray, ["fainted"]) }}
+                    </div>
                   </div>
                 </div>
                 <div
-                  class="flex justify-center border rounded-full bg-cyan-200 border-cyan-400 w-28 hover:cursor-pointer hover:bg-cyan-100"
+                  class="flex justify-center border rounded-full h-fit bg-cyan-200 border-cyan-400 w-28 hover:cursor-pointer hover:bg-cyan-100"
                   (click)="changeWinner('a')"
                 >
                   <div [ngClass]="winnerClass('a')">Winner</div>
@@ -223,25 +230,31 @@
             <div class="p-2 border-2 border-red-200 rounded-xl">
               <div class="flex w-full pb-1">
                 <div
-                  class="flex justify-center bg-red-200 border border-red-400 rounded-full w-28 hover:cursor-pointer hover:bg-red-100"
+                  class="flex justify-center bg-red-200 border border-red-400 rounded-full h-fit w-28 hover:cursor-pointer hover:bg-red-100"
                   (click)="changeWinner('b')"
                 >
                   <div [ngClass]="winnerClass('b')">Winner</div>
                 </div>
-                <div class="grid w-full grid-cols-1 sm:grid-cols-3 gap-x-4">
+                <div
+                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-base"
+                >
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Brought:</div>
-                    <div>{{ statCount(bTeamArray, ["brought"]) }}</div>
+                    <div [ngClass]="broughtCaution()">
+                      {{ statCount(bTeamArray, ["brought"]) }}
+                    </div>
                   </div>
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Kills:</div>
-                    <div>
+                    <div [ngClass]="bKillCaution()">
                       {{ statCount(bTeamArray, ["kills", "indirect"]) }}
                     </div>
                   </div>
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Deaths:</div>
-                    <div>{{ statCount(bTeamArray, ["fainted"]) }}</div>
+                    <div [ngClass]="aKillCaution()">
+                      {{ statCount(bTeamArray, ["fainted"]) }}
+                    </div>
                   </div>
                 </div>
               </div>
